@@ -284,6 +284,10 @@
                    condition="python: context.showMeetingManagerReservedField('notes')">
           <metal:f use-macro="context/@@pm-macros/editContentField"/>
         </tal:field>
+        <tal:field define="fieldName python: 'authorityNotice'"
+                   condition="python: context.showMeetingManagerReservedField('authorityNotice')">
+          <metal:f use-macro="context/@@pm-macros/editContentField"/>
+        </tal:field>
         <tal:field define="fieldName python: 'observations'"
                    condition="python: context.showMeetingManagerReservedField('observations')">
           <metal:f use-macro="context/@@pm-macros/editContentField"/>
